[tool.poetry]
name = "architectures"
version = "0.1.0"
description = ""
authors = ["hong@arch-pyton-dev <yunghunghuang984@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
diagrams = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
